maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:54: error: type mismatch;
 found   : Int(4)
 required: plm.universe.Direction
var t = Array[Direction](4)
                         ^JediEscaper:95: error: Int does not take parameters
  setDirection(t(indiceMin()))
                          ^